# sealed-rs

./: .gitignore  .rusty-hook.toml  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
demo/: Cargo.toml
demo/src/: main.rs
examples/: bound-erasure-fn.rs  breakage.rs  generics.rs  nesting.rs  partial.rs  raw-ident.rs  simple.rs  super.rs  syn.rs
src/: lib.rs
tests/: test.rs
tests/compile/: 01.rs  01.stderr  drone.rs
tests/fail/: 01-general.rs  01-general.stderr  02-nesting.rs  02-nesting.stderr  03-private-by-default.rs  03-private-by-default.stderr  04-no-full-pub.rs  04-no-full-pub.stderr  05-no-comma.rs  05-no-comma.stderr  06-wrong-argument.rs  06-wrong-argument.stderr  07-sealed-function.rs  07-sealed-function.stderr  08-partial-seal.rs  08-partial-seal.stderr  09-partial-argument.rs  09-partial-argument.stderr  10-partial-without-default.rs  10-partial-without-default.stderr  11-implementing-sealed-function.rs  11-implementing-sealed-function.stderr  12-calling-sealed-function.rs  12-calling-sealed-function.stderr
tests/pass/: 01-long-name.rs  02-nesting.rs  03-generics.rs  04-multiple-traits.rs  05-raw-ident.rs  06-bounds.rs  07-bound-erasure.rs  08-bound-erasure-fn.rs  09-enum.rs  10-all-arguments.rs  11-where.rs  12-lifetime.rs  13-const-generics.rs  14-partial-seal.rs  14-sealed-functions.rs  14-supertrait.rs  15-partial-seal.rs
