[package]
name = "sealed"
version = "0.2.0-rc2"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
license = "MIT OR Apache-2.0"
description = "Macro for sealing traits and structures"
repository = "https://github.com/jmg-duarte/sealed-rs"
documentation = "https://docs.rs/sealed"
categories = ["development-tools", "rust-patterns"]
keywords = ["proc_macro", "sealed", "future-proofing"]
readme = "README.md"
edition = "2018"
exclude = ["images/*"]
resolver = "2"

[workspace]
members = ["demo"]

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
syn = { version = "1.0", features = ["extra-traits"] }

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.3"
