[package]
name = "sealed"
version = "0.5.0"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
license = "MIT OR Apache-2.0"
description = "Macro for sealing traits and structures"
repository = "https://github.com/jmg-duarte/sealed-rs"
documentation = "https://docs.rs/sealed"
categories = ["development-tools", "rust-patterns"]
keywords = ["proc_macro", "sealed", "future-proofing"]
readme = "README.md"
edition = "2018"
exclude = ["images/*"]

[workspace]
members = ["demo"]

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
syn = { version = "2.0", features = ["extra-traits"] }

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.4"
